// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 1`] = `
<div>
  <button
    class="sc-dkPtRN cZrRhG"
    data-testid="confirmation-button-initial"
  >
    <i
      class="sc-bdvvtL ckvddW sl-minus-circle"
      style="line-height: inherit;"
    />
  </button>
</div>
`;

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 2`] = `
<div>
  <span>
    <button
      class="sc-dkPtRN cZrRhG"
      data-testid="confirmation-button-confirm"
    >
      <i
        class="sc-bdvvtL ckvddW sl-arrow-circle-right"
        style="line-height: inherit;"
      />
    </button>
    <button
      class="sc-dkPtRN cZrRhG"
      data-testid="confirmation-button-cancel"
    >
      <i
        class="sc-bdvvtL ckvddW sl-delete-circle"
        style="line-height: inherit;"
      />
    </button>
  </span>
</div>
`;

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 3`] = `
<div>
  <button
    class="sc-dkPtRN cZrRhG"
    data-testid="confirmation-button-initial"
  >
    <i
      class="sc-bdvvtL ckvddW sl-minus-circle"
      style="line-height: inherit;"
    />
  </button>
</div>
`;

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 4`] = `
<div>
  <button
    class="sc-dkPtRN cZrRhG"
    data-testid="confirmation-button-initial"
  >
    <i
      class="sc-bdvvtL ckvddW sl-minus-circle"
      style="line-height: inherit;"
    />
  </button>
</div>
`;
